force-app/main/default/objects/GPS_Landmark__c/GPS_Landmark__c.object-meta.xml
<CustomObject>
    <description>GPS Insight (WEX Fleet Intelligence) geofenced landmark. Synced from /landmark by WEXLandmarkSyncService.</description>
    <label>GPS Landmark</label>
    <nameField>
        <label>Landmark Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GPS Landmarks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>