force-app/main/default/objects/GPS_Landmark__c/fields/Landmark_Type__c.field-meta.xml
<CustomField>
    <fullName>Landmark_Type__c</fullName>
    <description>Shape type from GPS Insight: circle, polygon, or point.</description>
    <label>Landmark Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>