force-app/main/default/objects/GPS_Landmark__c/fields/Radius_Meters__c.field-meta.xml
<CustomField>
    <fullName>Radius_Meters__c</fullName>
    <description>Geofence radius in meters for circle landmarks.</description>
    <label>Radius (Meters)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>