force-app/main/default/objects/GPS_Landmark__c/fields/Raw_Payload__c.field-meta.xml
<CustomField>
    <fullName>Raw_Payload__c</fullName>
    <description>Full JSON payload from GPS Insight API for this landmark record.</description>
    <label>Raw Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>