force-app/main/default/objects/GPS_Landmark__c/fields/WEX_Landmark_Id__c.field-meta.xml
<CustomField>
    <fullName>WEX_Landmark_Id__c</fullName>
    <description>Unique landmark identifier from GPS Insight. Used as external ID for upsert.</description>
    <externalId>true</externalId>
    <label>WEX Landmark Id</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>